update Helm documentation